<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YouTube MAP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    
    <string name="txtLocation">Location: </string>
    <string name="btnGo">GO!</string>
    
    <string-array name="menu_item">
        <item>Current Location</item>
        <item>Normal</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>Hybrid</item>
        <item>None</item>
        <item>Settings</item>
    </string-array>
    
    <string name="txt_mapTypeNormal">Normal</string>
    <string name="txt_mapTypeSatellite">Satellite</string>
    <string name="txt_mapTypeTerrain">Terrain</string>
    <string name="txt_mapTypeHybrid">Hybrid</string>
    <string name="txt_mapTypeNone">None</string>
    <string name="txt_gotoCurrentLocation">Current Location</string>
    
    <string name="open_left_drawer">Open navigation drawer</string>
    <string name="close_left_drawer">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
     
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    
	<string-array name="syncFrequency">
        <item name="1">Once a day</item>
        <item name="7">Once a week</item>
        <item name="3">Once a year</item>
        <item name="0">Never (Update maually)</item>
    </string-array>
    <string-array name="syncFrequencyValues">
        <item name="1">1</item>
        <item name="7">7</item>
        <item name="30">30</item>
        <item name="0">0</item>
    </string-array>
    
    <string name="search_hint">Where you want to go</string>

</resources>
